# haptiquad_ros2

./: .gitmodules  README.md
haptiquad_msgs/: CMakeLists.txt  package.xml
haptiquad_msgs/msg/: EstimatedForces.msg
haptiquad_plot/: CMakeLists.txt  package.xml
haptiquad_plot/haptiquad_plot/: force_plotter.py  friction_setter.py  residual_plotter.py
haptiquad_plot/haptiquad_plot/libs/: dialogs.py  force_dialogs.py  plot_libs.py  plotter_base.py  residual_dialogs.py
haptiquad_ros2/: CMakeLists.txt  package.xml
haptiquad_ros2/config/: haptiquad_bag.yaml  haptiquad_gazebo.yaml  haptiquad_mujoco.yaml
haptiquad_ros2/include/haptiquad_ros2/: bag_wrapper.hpp  gazebo_wrapper.hpp  mujoco_wrapper.hpp  wrapper_base.hpp
haptiquad_ros2/launch/: bag_wrapper.launch.py  gazebo_wrapper.launch.py  mujoco_wrapper.launch.py
haptiquad_ros2/src/: bag_wrapper.cpp  gazebo_wrapper.cpp  mujoco_wrapper.cpp  wrapper_base.cpp
momobs_msgs/: CMakeLists.txt  package.xml
momobs_msgs/msg/: FrictionParameters.msg  ObserverGains.msg  ResidualErrorStamped.msg  ResidualsStamped.msg
momobs_plot/: CMakeLists.txt  package.xml
momobs_plot/momobs_plot/: force_plotter.py  friction_setter.py  residual_plotter.py
momobs_plot/momobs_plot/libs/: __init__.py  dialogs.py  plot_libs.py  plotter_base.py
momobs_ros2/: CMakeLists.txt  package.xml
momobs_ros2/config/: momobs_bag.yaml  momobs_mujoco.yaml
momobs_ros2/include/momobs_ros2/: bag_wrapper.hpp  gazebo_wrapper.hpp  mujoco_wrapper.hpp  wrapper_base.hpp
momobs_ros2/launch/: bag_wrapper.launch.py  gazebo_wrapper.launch.py  mujoco_wrapper.launch.py
momobs_ros2/src/: bag_wrapper.cpp  gazebo_wrapper.cpp  mujoco_wrapper.cpp  wrapper_base.cpp
